--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,3 +1,6 @@
 @import "normalize.scss";
+@import "container.scss";
 @import "layout/header";
 @import "layout/menu";
+@import "layout/about";
+@import "layout/expertise";
