--- a/src/assets/scss/base/normalize.scss
+++ b/src/assets/scss/base/normalize.scss
@@ -13,6 +13,10 @@
   box-sizing: border-box;
 }
 
+body {
+  min-height: 100vh;
+}
+
 li {
   list-style: none;
   
@@ -159,6 +163,8 @@ sup {
 
 img {
   border-style: none;
+  max-width: 100%;
+  display: block;
 }
 
 /* Forms
