--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -6,3 +6,5 @@
 @import "./layout/menu";
 @import "./layout/about";
 @import "./layout/expertise";
+@import "./layout/magic";
+@import "./layout/portfolio";
