--- a/src/assets/scss/base/_fonts.scss
+++ b/src/assets/scss/base/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "SFProDiaplay-Light", sans-serif;
+  font-family: "SFProDisplay-Light", sans-serif;
   src: url("../fonts/SFProDisplay-Light.woff") format("woff"),
   url("../fonts/SFProDisplay-Light.woff2") format("woff2");
     font-style: normal;
@@ -17,7 +17,7 @@
 }
 
 @font-face {
-  font-family: "OpenSans-Light";
+  font-family: "OpenSans-Light", sans-serif;
   src: url("../fonts/OpenSans-Light.woff") format("woff"), 
     url("../fonts/OpenSans-Light.woff2") format("woff2");
     font-style: normal;
@@ -26,8 +26,8 @@
 }
 
 @font-face {
-  font-family: "Merriweather_Light";
-  src: url("../fonts/Merriweather-LightItalic.woff") format("woff"),
+  font-family: "Merriweather-LightItalic", serif;
+  src: url("../fonts/Merriweather-Italic.woff") format("woff"),
     url("../fonts/Merriweather-LightItalic.woff2") format("woff2");
     font-style: italic;
     font-weight: 300;
@@ -38,6 +38,24 @@
   font-family: "Montserrat-Regular";
   src: url("../fonts/Montserrat-Regular.woff") format("woff"),
     url("../fonts/Montserrat-Regular.woff2") format("woff2");  
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+}
+
+@font-face {
+  font-family: "OpenSans-Regular", sans-serif;
+  src: url("../fonts/OpenSans-Regular.woff") format("woff"),
+    url("../fonts/OpenSans-Regular.woff2") format("woff2");  
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+}
+
+@font-face {
+  font-family: "SFProDisplay-Regular";
+  src: url("../fonts/SFProDisplay-Regular.woff") format("woff"),
+    url("../fonts/SFProDisplay-Regular.woff2") format("woff2");  
     font-style: normal;
     font-weight: 400;
     font-display: swap;
