--- a/src/assets/scss/base/_fonts.scss
+++ b/src/assets/scss/base/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "SFProDisplay-Light", sans-serif;
+  font-family: "SFProDisplay", sans-serif;
   src: url("../fonts/SFProDisplay-Light.woff") format("woff"),
   url("../fonts/SFProDisplay-Light.woff2") format("woff2");
     font-style: normal;
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat-Lihgt";
+  font-family: "Montserrat";
   src: url("../fonts/Montserrat-Light.woff") format("woff"), 
     url("../fonts/Montserrat-Light.woff2") format("woff2");
     font-style: normal;
@@ -17,7 +17,7 @@
 }
 
 @font-face {
-  font-family: "OpenSans-Light", sans-serif;
+  font-family: "OpenSans", sans-serif;
   src: url("../fonts/OpenSans-Light.woff") format("woff"), 
     url("../fonts/OpenSans-Light.woff2") format("woff2");
     font-style: normal;
@@ -26,7 +26,7 @@
 }
 
 @font-face {
-  font-family: "Merriweather-LightItalic", serif;
+  font-family: "Merriweather", serif;
   src: url("../fonts/Merriweather-Italic.woff") format("woff"),
     url("../fonts/Merriweather-LightItalic.woff2") format("woff2");
     font-style: italic;
@@ -35,7 +35,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat-Regular";
+  font-family: "Montserrat";
   src: url("../fonts/Montserrat-Regular.woff") format("woff"),
     url("../fonts/Montserrat-Regular.woff2") format("woff2");  
     font-style: normal;
@@ -44,7 +44,7 @@
 }
 
 @font-face {
-  font-family: "OpenSans-Regular", sans-serif;
+  font-family: "OpenSans";
   src: url("../fonts/OpenSans-Regular.woff") format("woff"),
     url("../fonts/OpenSans-Regular.woff2") format("woff2");  
     font-style: normal;
@@ -53,7 +53,7 @@
 }
 
 @font-face {
-  font-family: "SFProDisplay-Regular";
+  font-family: "SFProDisplay";
   src: url("../fonts/SFProDisplay-Regular.woff") format("woff"),
     url("../fonts/SFProDisplay-Regular.woff2") format("woff2");  
     font-style: normal;
@@ -62,7 +62,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat-Medium";
+  font-family: "Montserrat";
   src: url("../fonts/Montserrat-Medium.woff") format("woff"),
     url("../fonts/Montserrat-Medium.woff2") format("woff2");
     font-style: normal;
@@ -71,7 +71,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat-SemiBold";
+  font-family: "Montserrat";
   src: url("../fonts/Montserrat-SemiBold.woff") format("woff"), 
     url("../fonts/Montserrat-SemiBold.woff2") format("woff2");
     font-style: normal;
@@ -80,7 +80,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat-Bold", sans-serif;
+  font-family: "Montserrat", sans-serif;
   src: url("../fonts/Montserrat-Bold.woff") format("woff"), 
     url("../fonts/Montserrat-Bold.woff2") format("woff2");
     font-style: normal;
@@ -89,7 +89,7 @@
 }
 
 @font-face {
-  font-family: "Raleway-Bold", sans-serif;
+  font-family: "Raleway", sans-serif;
   src: url("../fonts/Raleway-Bold.woff") format("woff"),
     url("../fonts/Raleway-Bold.woff2") format("woff2");
     font-style: normal;
