--- a/src/assets/scss/layout/_slider-blog.scss
+++ b/src/assets/scss/layout/_slider-blog.scss
@@ -1,4 +1,19 @@
 .slider-blog {
   background-color: #f8f6fa;
   padding: 115px 0;
+
+  &__title{
+    font-weight: bold;
+  font-style: 36px;
+  line-height: 52px;
+  color: #242121;
+  margin-bottom: 10px;
+  max-width: 675px;
+  }
+
+  &__description {
+    max-width: 585px;
+  }
+
 }
+
