--- a/src/assets/scss/layout/_slider-blog.scss
+++ b/src/assets/scss/layout/_slider-blog.scss
@@ -3,12 +3,13 @@
   padding: 115px 0;
 
   &__title{
-    font-weight: bold;
+  font-weight: bold;
   font-style: 36px;
   line-height: 52px;
   color: #242121;
   margin-bottom: 10px;
   max-width: 675px;
+  display: inline-block;
   }
 
   &__description {
