--- a/src/assets/scss/layout/_expertise.scss
+++ b/src/assets/scss/layout/_expertise.scss
@@ -18,7 +18,7 @@
   }
 
   &__info-item {
-    font-family: "OpenSans-Regular";
+    font-family: "Open Sans", sans-serif;
     font-size: 11px;
     line-height: 20px;
     letter-spacing: 1px;
@@ -46,7 +46,7 @@
   }
 
   &__text p {
-    font-family: "SFProDisplay-Regular", sans-serif;
+    font-family: "SFProDisplay", sans-serif;
     color: #373A39;
     margin-bottom: 25px;
   }
@@ -90,7 +90,7 @@
   
 
   &__item-title {
-    font-family: "Raleway-Bold", sans-serif;
+    font-family: "Raleway", sans-serif;
     line-height: 20px;
     letter-spacing: 4.29px;
     color: #333333;
@@ -98,7 +98,7 @@
   }
 
   &__item-text {
-    font-family: "SFProDisplay-Light", sans-serif;
+    font-family: "SFProDisplay", sans-serif;
     max-width: 285px;
     color: #777777;
   }
