--- a/src/assets/scss/layout/_magic.scss
+++ b/src/assets/scss/layout/_magic.scss
@@ -16,7 +16,7 @@
   }
 
   &__text {
-    font-family: "OpenSans-Light",sans-serif;
+    font-family: "Open Sans",sans-serif;
   }
 
   &__text + &__text {
