--- a/src/assets/scss/layout/_menu.scss
+++ b/src/assets/scss/layout/_menu.scss
@@ -8,7 +8,7 @@
   }
 
   &__link {
-    font-family: "Raleway-Bold", sans-serif;
+    font-family: "Raleway", sans-serif;
     padding: 0 9px 9px;
     font-size: 12px;
     line-height: 14px;
