--- a/src/assets/scss/layout/_portfolio.scss
+++ b/src/assets/scss/layout/_portfolio.scss
@@ -9,7 +9,7 @@
   }
 
   &__filter-btn {
-    font-family: "OpenSans-Regular", sans-serif;
+    font-family: "Open Sans", sans-serif;
     margin-right: 25px;
     border: none;
     padding: 0 4px 5px;
@@ -67,7 +67,7 @@
 
   &__add {
     display: block;
-    font-family: "Montserrat-Bold", sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-size: 14px;
     line-height: 17px;
     letter-spacing: 1.2px;
@@ -79,7 +79,7 @@
   }
 
   &__blockquote {
-    font-family: "Merriweather-LightItalic", serif;
+    font-family: "Merriweather", serif;
     font-size: 18px;
     font-style: italic;
     line-height: 36px;
@@ -115,7 +115,7 @@
   }
 
   &__result-item {
-    font-family: "Montserrat-Bold", sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-size: 60px;
     line-height: 73px;
     color: #242121;
@@ -125,7 +125,7 @@
 
   &__result-item span {
     display: block;
-    font-family: "OpenSans-Regular", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-weight: 300;
     font-size: 14px;
     line-height: 19px;
