--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -23,7 +23,7 @@
   }
 
   &__title {
-    font-family: "Montserrat-Medium";
+    font-family: "Montserrat", sans-serif;
     font-size: 72px;
     line-height: 88px;
     color: #fff;
@@ -32,7 +32,7 @@
   }
 
   &__subtitle {
-    font-family: "Montserrat-Bold";
+    font-family: "Montserrat", sans-serif;
     font-style: 16px;
     line-height: 20px;
     letter-spacing: 2.7px;
