--- a/src/assets/scss/layout/_team.scss
+++ b/src/assets/scss/layout/_team.scss
@@ -1,3 +1,28 @@
 .team {
-  
+  padding: 120px 0 130px;
+
+  &__title {
+    margin-bottom: 100px;
+  }
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+  }
+
+  &__name {
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    line-height: 17px;
+    padding: 12px 0 35px;
+  }
+
+  &__position {
+    font-family: "Open Sans", sans-serif;
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 16px;
+    color: #373A39;
+  }
 }
