--- a/src/assets/scss/layout/_pricing.scss
+++ b/src/assets/scss/layout/_pricing.scss
@@ -1,5 +1,6 @@
 .pricing {
   padding: 140px 0 160px;
+  background: #F6F8FA;
 
   &__title {
     margin-bottom: 110px;
@@ -13,7 +14,29 @@
   &__item {
     max-width: 370px;
     width: 100%;
+    padding: 24px 0;
     height: 583px;
+    background: #FFFFFF;
+    text-align: center;
+  }
+
+  &__item-name {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    
+  }
+
+  &__item-num {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    font-size: 80px;
+    line-height: 109px;
+    sup {
+      font-size: 40px;
+      line-height: 54px;
+    }
   }
   
 }
