--- a/src/assets/scss/layout/_connection.scss
+++ b/src/assets/scss/layout/_connection.scss
@@ -3,14 +3,28 @@
   background-image: url("../images/map.jpg");
   background-size: 40%;
   background-repeat: no-repeat;
-  background-position: right 100%;
+  background-position: right 82%;
 
   &__title {
     margin-bottom: 95px;
   }
 
+  .connection__title {
+    margin-bottom: 80px;  
+  }
+
   &__form {
-    display: flex;
-    flex-direction: column;
+    max-width: 570px;
+  }
+
+  &__info {
+    display: block;
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #373A39;
+    font-size: 12px;
+    line-height: 20px;
+    padding: 16px 0;
+    margin-bottom: 16px;
   }
 }
