--- a/src/assets/scss/layout/_connection.scss
+++ b/src/assets/scss/layout/_connection.scss
@@ -31,5 +31,16 @@
       color: #888;
       text-transform: uppercase;
     }
+  
+  }
+
+  &__btn {
+    font-weight: 600;
+    font-size: 11px;
+    line-height: 13px;
+    letter-spacing: 2px;
+    color: #fff;
+    background-color: #242121;
+    padding: 15px 70px;
   }
 }
