--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -47,14 +47,15 @@
   }
 
   &__link-arrow {
-    margin: 0 auto;
+    display: inline-block;
   }
 
   &__copyright {
     padding: 42px 15px;
     background-color: #2A2C2B;
+    text-align: center;
+    font-size: 12px;
+    line-height: 1.9;
+    color: #fff;
   }
-
-  
-
 }
