--- a/src/assets/scss/components/_media.scss
+++ b/src/assets/scss/components/_media.scss
@@ -1,1 +1,35 @@
-@media (max-width:
+@media (max-width: 768px) {
+  .header {
+    &__title {
+      font-size: 50px;
+      margin-bottom: 10px;
+    }
+
+    &__subtitle {
+      font-size: 14px;
+    }
+  
+  }
+
+  .menu {
+    &__list {
+      display: none;
+    }
+}
+
+}
+
+@media (max-width: 440px) {
+  .header {
+    &__title {
+      font-size: 36px;
+    }
+
+    &__subtitle {
+      font-size: 12px;
+    }
+  
+  }
+
+
+}
