--- a/src/assets/scss/components/_media.scss
+++ b/src/assets/scss/components/_media.scss
@@ -1,5 +1,43 @@
 @media (max-width: 768px) {
+  .menu {
+    &__list {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      background-color: #000;
+      display: block;
+      text-align: center;
+      padding: 90px 0 15px;
+      transform: translateY(-200%);
+    }
+
+    &__item + &__item {
+      margin-left: 0;
+    }
+
+    &__link {
+      display: block;
+      padding: 15px 0;
+      color: #fff;
+    }
+
+    &__burger {
+      display: block;
+      background-color: transparent;
+      border: none;
+      padding: 0;
+      margin-top: 35px;
+      position: relative;
+      z-index: 2;
+    }
+  }
+
   .header {
+    &__top-inner {
+      align-items: center;
+    }
+
     &__title {
       font-size: 50px;
       margin-bottom: 10px;
@@ -8,21 +46,13 @@
     &__subtitle {
       font-size: 14px;
     }
-  
-  }
 
-  .menu {
-    &__list {
-      display: none;
+    &__logo {
+      position: relative;
+      z-index: 2;
     }
   }
-
-  .menu__burger {
-    display: block;
-    background-color: transparent;
-    border: none;
-    padding: 0;
-  }
+  
 
 }
 
