--- a/src/assets/scss/components/_media.scss
+++ b/src/assets/scss/components/_media.scss
@@ -27,10 +27,9 @@
       margin-bottom: 50px;
     }
   }
-  
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .expertise {
     &__inner {
       display: block;
@@ -40,6 +39,17 @@
     &__info {
       width: 100%;
       margin-right: 0;
+    }
+
+    &__items {
+      display: block;
+    }
+
+    &__item {
+      width: 100%;
+      &:not(:last-child) {
+        margin-bottom: 40px;
+      }
     }
   }
 }
