--- a/src/assets/scss/layout/_expertise.scss
+++ b/src/assets/scss/layout/_expertise.scss
@@ -51,7 +51,7 @@
     margin-bottom: 25px;
   }
 
-  &__wrapper {
+  &__box {
     display: flex;
     justify-content: space-between;
   }
@@ -88,7 +88,6 @@
     }
   }
   
-
   &__item-title {
     font-family: "Raleway", sans-serif;
     line-height: 20px;
