--- a/src/assets/scss/components/_media.scss
+++ b/src/assets/scss/components/_media.scss
@@ -60,6 +60,26 @@
     line-height: 58px;
   }
 
+  .header {
+    &__top-inner {
+      align-items: center;
+    }
+
+    &__title {
+      font-size: 50px;
+      margin-bottom: 10px;
+    }
+
+    &__subtitle {
+      font-size: 14px;
+    }
+
+    &__logo {
+      position: relative;
+      z-index: 2;
+    }
+  }
+
   .menu {
     &__list {
       position: absolute;
@@ -93,28 +113,6 @@
       z-index: 2;
     }
   }
-
-  .header {
-    &__top-inner {
-      align-items: center;
-    }
-
-    &__title {
-      font-size: 50px;
-      margin-bottom: 10px;
-    }
-
-    &__subtitle {
-      font-size: 14px;
-    }
-
-    &__logo {
-      position: relative;
-      z-index: 2;
-    }
-  }
-  
-
 }
 
 @media (max-width: 440px) {
@@ -132,8 +130,14 @@
     &__subtitle {
       font-size: 12px;
     }
-  
   }
+}
 
-
+@media (max-width: 340px) {
+  .expertise {
+    &__item {
+      padding-left: 0;
+      padding-top: 60px;
+    }
+  }
 }
